--- a/angular-frontend/src/app/lms-page/notes-page/notes-page.component.html
+++ b/angular-frontend/src/app/lms-page/notes-page/notes-page.component.html
@@ -1,7 +1,7 @@
 <div class="notes-dashboard">
   <header class="page-header">
     <h1 class="page-title">Notes</h1>
-    <button class="btn btn-primary" routerLink="/add-notes">
+    <button class="btn btn-primary" routerLink="/notes/new">
       New Note
     </button>
   </header>
@@ -10,7 +10,7 @@
     <div *ngIf="notes.length === 0" class="empty-state">
       <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg>
       <p>No notes yet</p>
-      <button class="btn btn-primary" routerLink="/add-notes">Create your first note</button>
+      <button class="btn btn-primary" routerLink="/notes/new">Create your first note</button>
     </div>
 
     <div
